[gd_scene load_steps=6 format=2]

[ext_resource path="res://Public/caixa-dialogo.png" type="Texture" id=1]
[ext_resource path="res://Public/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Cenas/Utilitarios/dialogo-dellson.gd" type="Script" id=3]
[ext_resource path="res://Public/dellsonCaixaDialogo.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 92
font_data = ExtResource( 2 )

[node name="PopupDialog" type="PopupDialog"]
pause_mode = 2
self_modulate = Color( 0, 0, 0, 0.223529 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -63.0
margin_right = 2.0
margin_bottom = -63.0
rect_scale = Vector2( 1.25228, 1.16034 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="DialogBox" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 223.592
margin_top = -237.175
margin_right = 1785.59
margin_bottom = 436.825
rect_scale = Vector2( 0.307, 0.307 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DialogBox"]
margin_left = 150.0
margin_top = 173.0
margin_right = 1866.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 1 )
text = "Dellson"
autowrap = true
percent_visible = 0.0

[node name="DialogSprite" type="TextureRect" parent="."]
margin_left = 7.18689
margin_top = 427.461
margin_right = 223.187
margin_bottom = 630.461
texture = ExtResource( 4 )
expand = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
